--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_auth:
-  provider:
+  provider: ^3.0.0
+  flutter_map: any
 
 dev_dependencies:
   flutter_test:
