--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   flutter_map: any
   mapbox_gl: ^0.0.5
   cached_network_image: ^2.0.0
+  flutter_cache_manager: ^1.1.3
 
 dev_dependencies:
   flutter_test:
