--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,12 @@ dependencies:
   firebase_auth:
   provider: ^3.0.0
   flutter_map: any
-  mapbox_gl: ^0.0.5
   cached_network_image: ^2.0.0
   flutter_cache_manager: ^1.1.3
+  image_picker: ^0.6.3
+  path_provider: ^1.5.1
+  image_downloader: ^0.19.1
+  latlong: ^0.6.1
 
 dev_dependencies:
   flutter_test:
