--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,13 +25,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth:
   provider: ^3.0.0
-  flutter_map: any
   cached_network_image: ^2.0.0
   flutter_cache_manager: ^1.1.3
   image_picker: ^0.6.3
   path_provider: ^1.5.1
   image_downloader: ^0.19.1
   latlong: ^0.6.1
+  google_maps_flutter: ^0.5.21+15
 
 dev_dependencies:
   flutter_test:
