--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   image_downloader: ^0.19.1
   latlong: ^0.6.1
   google_maps_flutter: ^0.5.21+15
+  font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
   flutter_test:
