--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  uuid: ^2.0.4
   firebase_auth:
   provider: ^3.0.0
   cached_network_image: ^2.0.0
@@ -33,7 +34,7 @@ dependencies:
   latlong: ^0.6.1
   google_maps_flutter: ^0.5.21+15
   font_awesome_flutter: ^8.5.0
-  flutter_google_places:
+  google_maps_webservice: ^0.0.16
 
 dev_dependencies:
   flutter_test:
