--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_maps_flutter: ^0.5.21+15
   font_awesome_flutter: ^8.5.0
   google_maps_webservice: ^0.0.16
+  geolocator: ^5.2.0
+  
 
 dev_dependencies:
   flutter_test:
