--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   google_maps_webservice: ^0.0.16
   geolocator: ^5.2.0
+  web_socket_channel: ^1.1.0
   
 
 dev_dependencies:
