--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_maps_webservice: ^0.0.16
   geolocator: ^5.2.0
   web_socket_channel: ^1.1.0
+  http: ^0.12.0+4
   
 
 dev_dependencies:
