--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   uuid: ^2.0.4
-  firebase_auth:
+  firebase_auth: ^0.15.4
   provider: ^3.0.0
   cached_network_image: ^2.0.0
   flutter_cache_manager: ^1.1.3
