--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
   cupertino_icons: ^0.1.2
   uuid: ^2.0.4
   firebase_auth: ^0.15.4
+  google_sign_in: ^4.0.0
+  firebase_core: ^0.4.0+8
+  firebase_dynamic_links: ^0.3.0
   provider: ^3.0.0
   cached_network_image: ^2.0.0
   flutter_cache_manager: ^1.1.3
