--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,11 @@ dependencies:
   image_downloader: ^0.19.1
   latlong: ^0.6.1
   font_awesome_flutter: ^8.5.0
-  google_maps_webservice: ^0.0.16
   geolocator: ^5.2.0
   web_socket_channel: ^1.1.0
   http: ^0.12.0+4
   location: ^3.0.0
-  
+  mapbox_search: ^2.0.1+1
 
 dev_dependencies:
   # flutter_test:
