--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^0.12.0+4
   location: ^3.0.0
   mapbox_search: ^2.0.1+1
+  url_launcher: ^5.7.10
 
 dev_dependencies:
   # flutter_test:
